feat: new conversations | remove polling direction messages

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -10,7 +10,8 @@
         [hasMore]="hasMore"
         (conversationSelected)="onConversationSelected($event)"
         (refresh)="onRefresh()"
-        (loadMore)="onLoadMore()">
+        (loadMore)="onLoadMore()"
+        (newConversation)="onNewConversation($event)">
       </app-conversation-list>
     </div>
 
